# neogreet

./: .editorconfig  package.json
src/: App.css  App.tsx  index.tsx  neogreet.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  neogreet.rs
src-tauri/src/neogreet/: cli.rs
